--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
+    "@react-pdf/renderer": "^4.3.2",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "cookies-next": "^6.1.0",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
     "mongodb": "^6.18.0",
     "mongoose": "^9.0.0",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/csv-parse": "^1.1.12",
     "@types/mongodb": "^4.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
