--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
+    "framer-motion": "^12.29.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
